# hindex-stats

./: .pre-commit-config.yaml  .projections.json  LICENSE  README.md  pyproject.toml
src/hindex_stats/: author.py  cli.py  data.py  fetch.py  utils.py
src/hindex_stats/cmd/: __init__.py  show.py
src/hindex_stats/db/: __init__.py  memory.py
src/hindex_stats/scrap/: iccs_smart_program.py
src/hindex_stats/scrap/iccs/: parser.py
tests/: data.py  test_utils.py
tests/db/: test_memory.py
tests/resources/scrap/iccs/: author.html  program.html  session.html
tests/scrap/: test_iccs_smart_program.py
tests/scrap/iccs/: test_parser.py
