[tool.poetry]
name = "hindex-stats"
version = "0.1.0"
description = "Tool for collecting and processing Google Scholar data"
license = "MIT"
authors = ["Marcin Łoś <marcin.los.91@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/marcinlos/hindex-stats"


[tool.poetry.scripts]
hindex-stats = "hindex_stats.cli:main"


[tool.poetry.dependencies]
python = "^3.12"
scholarly = "^1.7.11"
argcomplete = "^3.2.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pre-commit = "^3.6.0"
ruff = "^0.1.11"

[tool.mypy]
ignore_missing_imports = true


[tool.ruff]
target-version = "py312"
src = ["src", "test"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # Pyflakes
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "I"      # isort
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
